# scrypt-opt

./: .gitignore  Cargo.toml  LICENSE  README.md  cbindgen.toml
.cargo/: mutants.toml
.github/: copilot-instructions.md
.github/workflow/: test.yml
.github/workflows/: build.yml  test.yml
bench-logs/: RustCrypto-avx2-dynamic_dispatch.txt  RustCrypto-avx512vl.txt
benches/: bench_hash.rs
examples/: cracker.rs  dynamic_r.rs  large_p.rs
include/: scrypt_opt.h
scrypt-opt-derive/: Cargo.toml
scrypt-opt-derive/src/: lib.rs
src/: block_mix.rs  compat.rs  features.rs  fixed_r.rs  lib.rs  main.rs  memory.rs  pbkdf2_1.rs  pipeline.rs  salsa20.rs  self_test.rs  sha2_mb.rs  simd.rs
src/salsa20/: mod.rs  x86_64.rs
