[package]
name = "scrypt-opt"
description = "A pure-rust optimized scrypt implementation for moderate to high difficulty cases, with AVX2 and AVX512 intrinsics cores and a portable-simd core."
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
version = "0.3.0"
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[workspace]
resolver = "3"
members = ["scrypt-opt-derive"]

[workspace.package]
authors = ["Yumechi <yume@yumechi.jp>"]
license = "Apache-2.0"
repository = "https://github.com/eternal-flame-AD/scrypt-opt"
documentation = "https://docs.rs/scrypt-opt"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["scrypt", "password-hashing", "proof-of-work", "mining"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
scrypt-opt-derive = "0.1"
sha2 = { version = "0.10", default-features = false, features = ["compress"] }
cfg-if = "1.0"
generic-array = { version = "1.2", default-features = false }
core_affinity = { version = "0.8", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
base64 = { version = "0.22", optional = true }
crossbeam-utils = { version = "0.8", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
password-hash = { version = "0.5", optional = true, features = ["alloc"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Security", "Win32_System_Memory", "Win32_System_Threading"], optional = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
num_cpus = "1.17"
pbkdf2 = "0.12"
salsa20 = "0.10"
scrypt = "0.11"

[features]
default = ["std"]
std = ["alloc"]
huge-page = ["dep:libc", "dep:windows-sys", "std"]
alloc = []
portable-simd = []
core_affinity = ["std", "dep:core_affinity"]
bin = ["std", "dep:base64", "dep:clap", "dep:crossbeam-utils", "dep:crossbeam-channel", "dep:password-hash"]

[[bench]]
name = "bench_hash"
harness = false
required-features = ["std"]

[[bin]]
name = "scrypt-opt"
path = "src/main.rs"
required-features = ["bin"]

[[example]]
name = "cracker"
path = "examples/cracker.rs"
required-features = ["std"]

[[example]]
name = "large_p"
path = "examples/large_p.rs"
required-features = ["std"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-simd"]
